refactor troca repetição de Id por operationId
